# SentinellaEDR

./: .gitignore  Cargo.toml  LICENSE  README.md  Sentinella_amd64.appImage  check_ebpf.rs  install.sh  release_notes.md
.cargo/: config.toml
apps/desktop/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: EventTable.tsx  StatusBar.tsx
apps/desktop/src/lib/: tauri.ts  types.ts
check_ebpf/: Cargo.toml
check_ebpf/src/: main.rs
crates/sentinella-common/: Cargo.toml
crates/sentinella-common/src/: lib.rs
crates/sentinella-core/: Cargo.toml
crates/sentinella-core/src/: events.rs  lib.rs  loader.rs  mitre.rs
crates/sentinella-ebpf/: Cargo.toml  rust-toolchain.toml
crates/sentinella-ebpf/src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
