[package]
name = "sentinella-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sentinella userspace core: eBPF loader, event processing, MITRE ATT&CK mapping"

[dependencies]
sentinella-common = { workspace = true, features = ["user"] }
aya = "0.13"
aya-log = "0.2"
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
chrono.workspace = true
